[project]
name = "ee364b-tax-smart-transition"
version = "0.1.0"
description = "EE364B Stochastic Programming Tax-Smart Transition"
authors = [
    {name = "trank4",email = "khoa.tran.uc@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "cvxpy (>=1.8.2,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "stochastic-optimizer @ file:///Users/khoatran/Desktop/stanford/ee364b/EE-364B-Stochastic-Programming-Tax-Smart-Transition/packages/stochastic-optimizer",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "black (>=26.3.1,<27.0.0)"
]
